--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -36,6 +36,11 @@
 	background-color: #777;
 }
 
+.card__btn:disabled {
+	opacity: .6;
+	cursor: default;
+}
+
 .card__discount {
 	position: absolute;
 	top: 10px;
