--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -11,7 +11,7 @@
 	align-items: center;
 }
 
-.modal {
+.my-modal {
 	max-width: calc(100% - 40px);
 	max-height: calc(100% - 40px);
 	width: 400px;
@@ -20,6 +20,8 @@
 	border-radius: 4px;
 	box-sizing: border-box;	
 }
+
+
 	form {
 		display: grid;
 		gap: 20px
